--- a/GeekSay/GeekSay.csproj
+++ b/GeekSay/GeekSay.csproj
@@ -12,6 +12,7 @@
     <FileVersion>1.1.0.0</FileVersion>
     <PackageReleaseNotes>- Added Windows/DOS translations. To enable them pass "true" as the second argument to Say/SayWord, or as the only argument in SaySomething.
 - The words are now case insensitive.</PackageReleaseNotes>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <ItemGroup>
